# prompt-pack-lint

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
prompt_pack_lint/: __init__.py  cli.py  linter.py
tests/: test_linter.py
