[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "prompt-pack-lint"
version = "0.1.0"
description = "Lint AI prompt packs for placeholders, secret-like values, and missing safety guardrails."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Jonathan"}]
keywords = ["prompts", "agents", "lint", "security", "cli"]

[project.scripts]
prompt-pack-lint = "prompt_pack_lint.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
